// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup [common] example testing should match snapshot(s) for stateful 1`] = `
<span
  className="lucid-ButtonGroup"
>
  <Button
    callbackId={0}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="0"
    onClick={[Function]}
    type="button"
  >
    Zero
  </Button>
  <Button
    callbackId={1}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    type="button"
  >
    One
  </Button>
  <Button
    callbackId={2}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    type="button"
  >
    Two
  </Button>
  <Button
    callbackId={3}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="3"
    onClick={[Function]}
    type="button"
  >
    Three
  </Button>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
</span>
`;

exports[`ButtonGroup [common] example testing should match snapshot(s) for stateless 1`] = `
<span
  className="lucid-ButtonGroup"
>
  <Button
    callbackId={0}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="0"
    onClick={[Function]}
    type="button"
  >
    Zero
  </Button>
  <Button
    callbackId={1}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="1"
    onClick={[Function]}
    type="button"
  >
    One
  </Button>
  <Button
    callbackId={2}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="2"
    onClick={[Function]}
    type="button"
  >
    Two
  </Button>
  <Button
    callbackId={3}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="3"
    onClick={[Function]}
    type="button"
  >
    Three
  </Button>
  <Button
    callbackId={4}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="4"
    onClick={[Function]}
    type="button"
  >
    Four
  </Button>
  <Button
    callbackId={5}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={true}
    key="5"
    onClick={[Function]}
    type="button"
  >
    Five
  </Button>
  <Button
    callbackId={6}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="6"
    onClick={[Function]}
    type="button"
  >
    Six
  </Button>
  <Button
    callbackId={7}
    hasOnlyIcon={false}
    isActive={true}
    isDisabled={false}
    key="7"
    onClick={[Function]}
    type="button"
  >
    Seven
  </Button>
  <Button
    callbackId={8}
    hasOnlyIcon={false}
    isActive={true}
    isDisabled={false}
    key="8"
    onClick={[Function]}
    type="button"
  >
    Eight
  </Button>
  <Button
    callbackId={9}
    hasOnlyIcon={false}
    isActive={false}
    isDisabled={false}
    key="9"
    onClick={[Function]}
    type="button"
  >
    Nine
  </Button>
  <ButtonGroup.Button>
    Zero
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    One
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Two
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Three
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Four
  </ButtonGroup.Button>
  <ButtonGroup.Button
    isDisabled={true}
  >
    Five
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Six
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Seven
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Eight
  </ButtonGroup.Button>
  <ButtonGroup.Button>
    Nine
  </ButtonGroup.Button>
</span>
`;
